--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,13 @@
 <div class="navbar bg-yellow-600">
-  <div class="flex-1">
-    <%= link_to t('defaults.eigoemon'), root_path, class: 'btn bg-rose-900 hover:bg-rose-800 text-white text-xl font-yusei ml-10' %>
+  <!-- PC 用 -->
+  <div class="hidden lg:block flex-1">
+      <%= link_to t('defaults.eigoemon'), root_path, class: 'btn bg-rose-900 hover:bg-rose-800 text-white text-xl font-yusei ml-10' %>
   </div>
+  <!-- タブレット/スマートフォン 用 -->
+  <div class="lg:hidden flex-1">
+    <%= link_to t('defaults.mobile_eigoemon'), root_path, class: 'btn bg-rose-900 hover:bg-rose-800 text-white font-yusei ml-10' %>
+  </div>
+
   <div class="flex-none">
     <ul class="menu menu-horizontal px-3 text-xl font-yusei text-base-200">
       <li>
