--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,91 +2,82 @@
   <div class="mt-5">
     <%= image_tag("edo2.png", alt: "Top Image") %>
   </div>
-  <div class="mt-5">
-    <div class="relative flex flex-col items-center max-w-7xl mx-auto bg-orange-100 rounded-xl border-4 border-transparent hover:border-rose-200 mb-10 pb-52">
+  <div class="mt-5 p-5 lg:p-0">
+  <div class="relative flex flex-col items-center max-w-7xl mx-auto bg-orange-100 rounded-xl border-4 border-transparent hover:border-rose-200 mb-10 pb-52">
+    <!-- 小さなカード -->
+    <div class="mt-8 flex items-center justify-center bg-purple-900 py-4 lg:py-6 w-36 lg:w-44 rounded-2xl h-7">
+      <h2 class="text-white lg:text-2xl font-rocknroll">せつめい</h2>
+    </div>
+
+    <!-- 中央のテキスト部分 -->
+    <% unless signed_in? %>
+      <div class="hidden lg:flex flex-col items-center justify-center px-4 mt-8">
+        <p class="lg:text-2xl font-yusei">まずは「おためし」ボタンをおして、このwebアプリが何をしようとしているのかを体感してこよう！</p>
+        <p class="mt-2 lg:text-2xl font-yusei">とはいえ事前情報がほしいひとのために、順に説明するよ。</p>
+      </div>
+    <% end %>
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="mt-20 w-full flex flex-col lg:flex-row items-start">
+        <!-- 小さなカード -->
+        <div class="flex-shrink-0 mx-auto lg:mx-0 lg:ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-36 lg:w-48 h-7 py-4 lg:py-6 mt-3">
+          <h2 class="text-white text-xl lg:text-2xl font-rocknroll text-center">がいよう</h2>
+        </div>
+        <!-- 右寄せのテキスト部分 -->
+        <div class="mt-4 lg:mt-0 ml-0 lg:ml-10 flex flex-col items-start justify-center px-4 lg:px-0">
+          <p class="lg:text-2xl font-yusei">このwebアプリでは<span class="text-rose-800">プログラミング中によく見かける英単語</span> を <span class="text-rose-800">ネイティブっぽく発音する方法</span> が ゆるーく学べるよ。</p>
+          <p class="lg:text-2xl font-yusei">なぜ ゆるーく なのかというと、ここでおこなっていることは、<span class="text-rose-800">はつおん記号を使わずに 英単語にひらがなでふりがなをふる </span>という試みだからだよ。</p>
+        </div>
+      </div>
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="mt-20 w-full flex flex-col lg:flex-row items-start">
+        <!-- 小さなカード -->
+        <div class="flex-shrink-0 mx-auto lg:mx-0 lg:ml-24 flex items-center justify-center bg-orange-700 rounded-2xl w-36 lg:w-48 h-7 py-4 lg:py-6 mt-3">
+          <h2 class="text-white text-xl lg:text-2xl font-rocknroll text-center">もんだい</h2>
+        </div>
+        <!-- 右寄せのテキスト部分 -->
+        <div class="mt-4 lg:mt-0 ml-0 lg:ml-10 flex flex-col items-start justify-center px-4 lg:px-0">
+          <p class="lg:text-2xl font-yusei mr-24 py-1">ある英単語に対して、よりネイティブっぽく読めるふりがなはどちらかを当てる2択のクイズが始まるよ。</p>
+          <p class="lg:text-2xl font-yusei mr-24 py-1">解説画面にすすむと、<span class="text-rose-800">会話の中でのその単語の音声 </span>と、その単語が<span class="text-rose-800"> プログラミングではどのように使われているかの解説 </span>を見ることができるよ。</p>
+        </div>
+      </div>
+
+      <!-- 下部の小さなカードと右寄せテキスト -->
+      <div class="hidden lg:flex flex-col lg:flex-row items-start mt-20 w-full">
       <!-- 小さなカード -->
-      <div class="mt-8 flex items-center justify-center bg-purple-900 py-6 w-44 rounded-2xl h-7">
-        <h2 class="text-white text-2xl font-rocknroll">せつめい</h2>
+      <div class="flex-shrink-0 mx-auto lg:mx-0 lg:ml-24 flex items-center justify-center bg-green-700 rounded-2xl w-36 lg:w-48 h-7 py-4 lg:py-6 mt-3">
+        <h2 class="text-white text-xl lg:text-2xl font-rocknroll text-center">図書館</h2>
       </div>
-
-      <!-- 中央のテキスト部分 -->
-      <% unless signed_in? %>
-      <div class="mt-8 flex flex-col items-center justify-center">
-        <p class="text-2xl font-yusei">まずは「おためし」ボタンをおして、このwebアプリが何をしようとしているのかを体感してこよう！</p>
-        <p class="mt-2 text-2xl font-yusei">とはいえ事前情報がほしいひとのために、順に説明するよ。</p>
+      <!-- 右寄せのテキスト部分 -->
+      <div class="mt-4 lg:mt-0 ml-0 lg:ml-10 flex flex-col items-start justify-center px-4 lg:px-0">
+        <p class="lg:text-2xl font-yusei mr-24 py-1">もんだいに使用している英単語を一覧でかくにんすることができるよ。</p>
+        <p class="lg:text-2xl font-yusei mr-24 py-1">詳細画面にすすむと、<span class="text-rose-800">会話の中でのその単語の音声 </span>と、その単語の<span class="text-rose-800">発音にかんする解説 </span>を見ることができるよ。</p>
       </div>
-      <% end %>
+    </div>
 
-      <!-- 下部の小さなカードと右寄せテキスト -->
-      <div class="mt-20 w-full flex items-start">
-        <!-- 小さなカード -->
-        <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-48 h-7 px-2 py-6 mt-3">
-          <h2 class="text-white text-2xl font-rocknroll text-center">がいよう</h2>
-        </div>
-        <!-- 右寄せのテキスト部分 -->
+      <p class="lg:text-5xl font-yusei mr-9 mt-10 mb-10 text-center text-purple-900">説明は以上だよ！さっそく遊ぼう！</p>
+
+      <div class="mt-8 flex items-center justify-center bg-blue-700 py-4 lg:py-6 w-36 lg:w-44 rounded-2xl h-7">
+        <h2 class="text-white text-xl lg:text-2xl font-rocknroll">ほそく</h2>
+      </div>
         <div class="ml-10 flex flex-col items-start justify-center">
-          <p class="text-2xl font-yusei mr-24 py-1">このwebアプリでは<span class="text-rose-800">プログラミング中によく見かける英単語</span> を <span class="text-rose-800">ネイティブっぽく発音する方法</span> が ゆるーく学べるよ。</p>
-          <p class="text-2xl font-yusei mr-24 py-1">なぜ ゆるーく なのかというと、ここでおこなっていることは、<span class="text-rose-800">はつおん記号を使わずに 英単語にひらがなでふりがなをふる </span>という試みだからだよ。</p>
+          <p class="lg:text-2xl font-yusei mr-24 py-4">ふりがな をふるにあたって、気をつけたことを記載するよ。</p>
+          <p class="lg:text-2xl font-yusei mr-24">ふりがなは発音を完璧に表すものではないよ。</p>
+          <p class="lg:text-2xl font-yusei mr-24">例外もあるけれど、基本的には以下のルールに則ってふりがなをふったよ。</p>
         </div>
-      </div>
 
-      <!-- 下部の小さなカードと右寄せテキスト -->
-      <div class="mt-24 w-full flex items-start">
-        <!-- 小さなカード -->
-        <div class="ml-24 flex items-center justify-center bg-orange-700 w-48 mt-3 py-6 px-2 rounded-2xl h-7">
-          <h2 class="text-white text-2xl font-rocknroll text-center">もんだい</h2>
-        </div>
-        <!-- 右寄せのテキスト部分 -->
-        <div class="ml-10 flex flex-col items-start justify-center">
-          <p class="text-2xl font-yusei mr-24 py-1">ある英単語に対して、よりネイティブっぽく読めるふりがなはどちらかを当てる2択のクイズが始まるよ。</p>
-          <p class="text-2xl font-yusei mr-24 py-1">解説画面にすすむと、<span class="text-rose-800">会話の中でのその単語の音声 </span>と、その単語が<span class="text-rose-800"> プログラミングではどのように使われているかの解説 </span>を見ることができるよ。</p>
-        </div>
-      </div>
-
-      <!-- 下部の小さなカードと右寄せテキスト -->
-      <div class="mt-24 w-full flex items-start">
-        <!-- 小さなカード -->
-        <div class="ml-24 flex items-center justify-center bg-green-700 rounded-2xl w-44 h-7 py-6 mt-3">
-          <h2 class="text-white text-2xl font-rocknroll">図書館</h2>
-        </div>
-        <!-- 右寄せのテキスト部分 -->
-        <div class="ml-10 flex flex-col items-start justify-center">
-          <p class="text-2xl font-yusei mr-24 py-1">もんだいに使用している英単語を一覧でかくにんすることができるよ。</p>
-          <p class="text-2xl font-yusei mr-24 py-1">詳細画面にすすむと、<span class="text-rose-800">会話の中でのその単語の音声 </span>と、その単語の<span class="text-rose-800">発音にかんする解説 </span>を見ることができるよ。</p>
-          <p class="text-2xl font-yusei mr-24 py-1">※ 図書館コーナーでは、プログラミングにかんする解説は見ることができないよ</p>
-        </div>
-      </div>
-      <p class="text-5xl font-yusei mr-9 mt-10 text-center text-purple-900">説明は以上だよ！さっそく遊ぼう！</p>
-
-      <!-- 下部の小さなカードと右寄せテキスト -->
-      <div class="w-full flex items-start mt-44">
-        <!-- 小さなカード -->
-        <div class="ml-24 flex items-center justify-center bg-blue-700 rounded-2xl w-40 h-7 py-6 px-3 mt-3">
-          <h2 class="text-white text-2xl font-rocknroll text-center">ほそく</h2>
-        </div>
-        <!-- 右寄せのテキスト部分 -->
-        <div class="ml-10 flex flex-col items-start justify-center">
-          <p class="text-2xl font-yusei mr-24 py-4">ふりがな をふるにあたって、気をつけたことを記載するよ。</p>
-        </div>
-      </div>
-
-      <div class="text-2xl font-yusei mt-5 mr-10 ml-20">
-        <p>ふりがなは発音を完璧に表すものではないよ。</p>
-        <p>例外もあるけれど、基本的には以下のルールに則ってふりがなをふったよ。</p>
-        <div class="mt-5 text-gray-950 mr-10 ml-10">
-        <ul class="list-disc py-5">
-          <li class="pt-2">文字の色が濃い部分は その単語を読むときに強調する部分を表しているよ</li>
-          <li class="pt-3">小さい文字で書いた母音（あ・い・う・え・お）は、その音を読む拍数が1拍に満たないことを表すよ</li>
-          <li class="list-none pt-1">たとえば発音記号の「<span class="font-mono">ae</span>」は「ぇあ」と表記しているよ</li>
-          <li class="list-none pt-1">これは、「え」と言った後に高速で「あ」と言うことで「<span class="font-mono">ae</span>」の音に近づけることを目指しているよ</li>
-          <li class="list-none pt-1">「r」で始まる英単語には、最初に小さな「う」を添えていることが多いよ</li> 
-          <li class="list-none pt-1">これは、「う」の口の形をすることで、「r」の音を出しやすくするためだよ</li>                                                       
-          <li class="pt-3">「じ」と「ぢ」は、発音記号にあわせて表記をわけているよ。</li>
-          <li class="list-none pt-1">具体的には、「ʒ（まさつ音）」を「じ」、「dʒ（はさつ音）を「ぢ」と表しているよ</li> 
-          <li class="list-none pt-1">※ 細かいことは最初は気にせず、慣れてきたら意識して言い分けてみよう</li>                  
-          <li class="pt-3">どの部分の音を強調するのかを明確にするために、やや大袈裟にふりがなをふっていることがあるよ</li>
-        </ul>
-        </div>
+      <div class="lg:text-2xl font-yusei mt-5 mr-10 ml-10">
+        <p class="pt-2">・文字の色が濃い部分は その単語を読むときに強調する部分を表しているよ</p>
+        <p class="pt-3">・小さい文字で書いた母音（あ・い・う・え・お）は、その音を読む拍数が1拍に満たないことを表すよ</p>
+        <p class="pt-1">　たとえば発音記号の「<span class="font-mono">ae</span>」は「ぇあ」と表記しているよ</p>
+        <p class="pt-1">　これは、「え」と言った後に高速で「あ」と言うことで「<span class="font-mono">ae</span>」の音に近づけることを目指しているよ</p>
+        <p class="pt-1">・「r」で始まる英単語には、最初に小さな「う」を添えていることが多いよ</p> 
+        <p class="pt-1">　これは、「う」の口の形をすることで、「r」の音を出しやすくするためだよ</p>                                                       
+        <p class="pt-3">・「じ」と「ぢ」は、発音記号にあわせて表記をわけているよ。</p>
+        <p class="pt-1">　具体的には、「ʒ（まさつ音）」を「じ」、「dʒ（はさつ音）を「ぢ」と表しているよ</p> 
+        <p class="pt-1">※ 細かいことは最初は気にせず、慣れてきたら意識して言い分けてみよう</p>                  
+        <p class="pt-3">・どの部分の音を強調するのかを明確にするために、やや大袈裟にふりがなをふっていることがあるよ</p>
       </div>
     </div>
   </div>
