--- a/app/views/shared/_youglish.html.erb
+++ b/app/views/shared/_youglish.html.erb
@@ -1,11 +1,16 @@
-<div class="w-full lg:w-1/2 mx-auto lg:mx-0 mt-20">
+<div class="w-2/3 lg:w-1/2 lg:mx-0 mt-20">
   <div id="youglish-player"></div>
   <div id="youglish-widget" data-word="<%= word.name %>"></div>
-  <div class="ml-48">
+  <div class="ml-48 hidden lg:block">
     <button id="play-button" class="btn btn-primary"><%= t('youglish.play') %></button>
     <button id="pause-button" class="btn btn-secondary"><%= t('youglish.pause') %></button>
     <button id="next-button" class="btn btn-primary"><%= t('youglish.next') %></button>
     <button id="prev-button" class="btn btn-secondary"><%= t('youglish.previous') %></button>
+    <button id="repeat-button" class="btn btn-secondary"><%= t('youglish.repeat') %></button>
+  </div>
+  <div class="block lg:hidden">
+    <button id="play-button" class="btn btn-secondary"><%= t('youglish.play') %></button>
+    <button id="pause-button" class="btn btn-primary"><%= t('youglish.pause') %></button>
     <button id="repeat-button" class="btn btn-secondary"><%= t('youglish.repeat') %></button>
   </div>
 </div>
